tests/invalidTest/other/func_same_name_with_arg.q
# EXPECT repeated variable name
def void errorTest(sint64 a){
    sint32 a
}